--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -95,5 +95,18 @@
             android:textColor="#000000"
             android:minHeight="48dp"/>
 
+
+
     </LinearLayout>
+    <TextView
+        android:id="@+id/tvDebugRegistrar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:text="Debug RegistrarIncidente"
+        android:textColor="#FF0000"
+        android:textStyle="bold"
+        android:clickable="true"
+        android:focusable="true"/>
 </LinearLayout>
