alterei nome do botão de debug que dizia ir para o registro mas agora vai para a tela principal

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -110,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
-        android:text="Debug RegistrarIncidente"
+        android:text="Debug MainActivity"
         android:textColor="#FF0000"
         android:textStyle="bold"
         android:clickable="true"
