--- a/app/src/main/res/layout/activity_incident_registration.xml
+++ b/app/src/main/res/layout/activity_incident_registration.xml
@@ -149,13 +149,14 @@
 
         <!-- Upload de Imagem -->
         <Button
-            android:id="@+id/btnEscolherArquivo"
+            android:id="@+id/btnEscolherImagem"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginBottom="16dp"
             android:background="@drawable/rounded_button"
             android:text="Anexar Foto"
             android:textColor="#000000" />
+
 
         <!-- Botão de Envio -->
         <Button
