--- a/app/src/main/res/layout/activity_incident_registration.xml
+++ b/app/src/main/res/layout/activity_incident_registration.xml
@@ -1,43 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:importantForAccessibility="no">
+    android:background="@android:color/white">
 
-
-    <TextView
-        android:id="@+id/debugLogin"
+    <Button
+        android:id="@+id/btnVoltar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:orientation="horizontal"
-        android:text="Debug Login"
-        android:textColor="@android:color/holo_blue_dark" />
-
-    <TextView
-        android:id="@+id/debugMain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:clickable="true"
-        android:orientation="horizontal"
-        android:text="Debug Main"
-        android:textColor="@android:color/holo_blue_dark" />
+        android:layout_height="45dp"
+        android:text="Voltar"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="-5dp"
+        android:elevation="6dp" />
 
     <LinearLayout
+        android:id="@+id/containerFormulario"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
-        android:background="@drawable/rounded_bg"
-        android:elevation="4dp"
         android:orientation="vertical"
-        android:padding="20dp">
-
+        android:background="@drawable/rounded_bg"
+        android:elevation="3dp"
+        android:layout_below="@id/btnVoltar"
+        android:layout_centerHorizontal="true"
+        android:padding="20dp"
+        android:layout_margin="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="32dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -160,4 +151,5 @@
             android:textColor="#000000" />
 
     </LinearLayout>
-</LinearLayout>
+
+</RelativeLayout>
