--- a/app/src/main/res/layout/activity_detalhe_registro.xml
+++ b/app/src/main/res/layout/activity_detalhe_registro.xml
@@ -3,9 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
     android:background="@android:color/white"
     android:padding="16dp">
+
+    <Button
+        android:id="@+id/btnVoltar"
+        android:layout_width="wrap_content"
+        android:layout_height="45dp"
+        android:text="Voltar"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="-5dp"
+        android:elevation="6dp" />
 
     <LinearLayout
         android:layout_width="350dp"
